--- a/views/new_part.erb
+++ b/views/new_part.erb
@@ -7,17 +7,17 @@
     <label style="font-weight:bold;">Project</label>
     <input type="text" disabled value="<%= @project.name %>" />
     <input type="hidden" name="project_id" value="<%= @project.id %>" />
-    <label style="font-weight:bold;">Part Name</label>
+    <label style="font-weight:bold;"><%= @type.capitalize %> Name</label>
     <input type="text" name="name" />
     <label style="font-weight:bold;">Parent Assembly</label>
     <select name="parent_part_id">
       <% @project.parts.select { |p| p.type == "assembly"}.each do |part| %>
       <option value="<%= part.id %>"<% if part.id == @parent_part_id.to_i %> selected<% end %>>
-        <%= part.name %>
+        <%= part.full_part_number %> (<%= part.name %>)
       </option>
       <% end %>
     </select>
-    <label><input type="submit" value="Create Part"></label>
+    <label><input type="submit" value="Create <%= @type.capitalize %>"></label>
   </form>
 </div>
 
