--- a/views/parts_list.erb
+++ b/views/parts_list.erb
@@ -4,7 +4,7 @@
     <th>Type</th>
     <th>Name</th>
     <th>Parent</th>
-    <th>Actions</th>
+    <th>Status</th>
   </tr>
   <% parts.each do |part| %>
   <tr>
@@ -16,7 +16,7 @@
       <a href="/parts/<%= part.parent_part.id %>"><%= part.parent_part.name if part.parent_part%></a>
       <% end %>
     </td>
-    <td>&nbsp;</td>
+    <td><%= part.status %></td>
   </tr>
   <% end %>
 </table>
