Added ability to edit parts.

--- a/views/part.erb
+++ b/views/part.erb
@@ -4,11 +4,12 @@
   <h2><%= @part.type.capitalize %>: <%= @part.name %></h2>
   <entry><b>Part Number:</b> <%= @part.full_part_number %></entry>
   <entry><b>Project:</b> <%= @part.project.part_number_prefix %> - <%= @part.project.name %></entry>
-  <entry><b>Status:</b> <%= @part.status %></entry>
+  <entry><b>Status:</b> <%= Part::STATUS_MAP[@part.status] %></entry>
   <% if @part.parent_part %>
   <entry><b>Parent Assembly:</b> <a href="/parts/<%= @part.parent_part.id %>">
       <%= @part.parent_part.full_part_number %> - <%= @part.parent_part.name %></a></entry>
   <% end %>
+  <a href="/parts/<%= @part.id %>/edit">Edit this part</a>
   <a href="/parts/<%= @part.id %>/delete">Delete this part</a>
   <% if @part.type == "assembly" %>
   <entry><b>Parts & Assemblies Contained Within this Assembly:</b></entry>
