--- a/views/parts_list.erb
+++ b/views/parts_list.erb
@@ -16,7 +16,7 @@
       <a href="/parts/<%= part.parent_part.id %>"><%= part.parent_part.name if part.parent_part%></a>
       <% end %>
     </td>
-    <td><%= part.status %></td>
+    <td><%= Part::STATUS_MAP[part.status] %></td>
   </tr>
   <% end %>
 </table>
