Added form auto-focus.

--- a/views/header.erb
+++ b/views/header.erb
@@ -3,6 +3,12 @@
     <title>Team 254 Part Management System</title>
     <link rel="icon" href="http://team254.com/wp-content/themes/cheesypoof2013/icons/favicon.ico">
     <link href='/css/css.css' rel='stylesheet' type='text/css' />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+    <script>
+      $(document).ready(function() {
+        $(":text:visible:enabled:first").focus();
+      });
+    </script>
   </head>
   <body>
     <div id="header">
