--- a/views/footer.erb
+++ b/views/footer.erb
@@ -1,2 +1,5 @@
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+<script src="/js/bootstrap.min.js"></script>
+<script src="/js/js.js"></script>
   </body>
 </html>
