--- a/views/new_project.erb
+++ b/views/new_project.erb
@@ -1,11 +1,13 @@
 <%= erb :header %>
 
-<div id="content">
+<div class="container">
   <h2>Create New Project</h2>
   <form action="/projects" method="POST">
-    Name: <input type="text" name="name" />
-    Part number prefix: <input type="text" name="part_number_prefix" />
-    <label><input type="submit" value="Create Project"></label>
+    <label>Name</label>
+    <input type="text" name="name" />
+    <label>Part number prefix</label>
+    <input type="text" name="part_number_prefix" />
+    <label><input type="submit" class="btn btn-success btn-medium" value="Create Project"></label>
   </form>
 </div>
 
