--- a/views/project_delete.erb
+++ b/views/project_delete.erb
@@ -1,9 +1,9 @@
 <%= erb :header %>
 
-<div id="content">
+<div class="container">
   <h2>Are you sure you want to delete project <%= @project.name %>?</h2>
   <form action="" method="POST">
-    <input type="submit" value="Yes" />
+    <input type="submit" class="btn btn-danger btn-medium" value="Yes" />
   </form>
 </div>
 
