--- a/views/projects.erb
+++ b/views/projects.erb
@@ -1,11 +1,20 @@
 <%= erb :header %>
 
-<div id="content">
+<div class="container">
+  <div class="row">
+<div class="span2">
   <h2>Projects</h2>
+</div>
+
+  <div class="pull-right" style="margin-top: 20px;">
+    <a href="/new_project" class="btn btn-success btn-small"><i class="icon-white icon-file"></i> New Project</a>
+  </div>
+</div>
+  <div class="well">
   <% Project.each do |project| %>
-  <p><a href="/projects/<%= project.id %>"><%= project.name %></a></p>
+  <li><h4><a href="/projects/<%= project.id %>"><%= project.name %></a></h4></li>
   <% end %>
-  <a href="/new_project">New Project</a>
+</div>
 </div>
 
 <%= erb :footer %>
