--- a/views/login.erb
+++ b/views/login.erb
@@ -1,16 +1,21 @@
 <%= erb :header %>
 
-<div id="content">
-  <% if @failed %>
-  <h3 style="color: red;">Invalid e-mail address or password.</h3>
-  <% end %>
-  <form action="?redirect=<%= @redirect %>" method="POST">
-    <label style="font-weight:bold;">E-mail</label>
-    <input type="text" name="email" />
-    <label style="font-weight:bold;">Password</label>
-    <input type="password" name="password" />
-    <label><input type="submit" value="Login" /></label>
-  </form>
+<div class="container">
+  <div class="row">
+    <div class="span4 offset4 well">
+      <legend>Please Sign In</legend>
+      <% if @failed %>
+            <div class="alert alert-error">
+                <a class="close" data-dismiss="alert" href="#">×</a>Invalid e-mail address or password.
+            </div>
+        <% end %>
+      <form action="?redirect=<%= @redirect %>" method="POST" action="" accept-charset="UTF-8">
+      <input type="text" class="span4" name="email" placeholder="E-mail">
+      <input type="password" class="span4" name="password" placeholder="Password">
+      <button type="submit" name="submit" class="btn btn-info btn-block">Sign in</button>
+      </form>
+    </div>
+  </div>
 </div>
 
 <%= erb :footer %>
