Changed button styling to be consistent

--- a/views/part_edit.erb
+++ b/views/part_edit.erb
@@ -16,7 +16,7 @@
       </select>
     <label><b>Notes</b></label>
      <textarea name="notes" rows="4"><%= @part.notes %></textarea>
-    <label><input type="submit" class="btn btn-success btn-medium" value="Save Part" /></label>
+    <label><input type="submit" class="btn btn-primary btn-medium" value="Save Part" /></label>
   </form>
 </div>
 
