--- a/views/project_edit.erb
+++ b/views/project_edit.erb
@@ -7,7 +7,7 @@
     <input type="text" name="name" value="<%= @project.name %>" />
     <label><b>Part number prefix:</b></label>
       <input type="text" name="part_number_prefix" value="<%= @project.part_number_prefix %>" />
-    <label><input type="submit" class="btn btn-success btn-medium" value="Save" /></label>
+    <label><input type="submit" class="btn btn-primary btn-medium" value="Save" /></label>
   </form>
 </div>
 
