Added password change.

--- a/views/header.erb
+++ b/views/header.erb
@@ -31,6 +31,7 @@
                 <ul class="dropdown-menu">
                   <li>
                     <a href="/logout"><i class="icon-off"></i> Logout</a>
+                    <a href="/change_password"><i class="icon-wrench"></i> Change Password</a>
                   </li>
                 </ul>
               </li>
