--- a/views/part_edit.erb
+++ b/views/part_edit.erb
@@ -7,15 +7,35 @@
     <label><b>Part Name<b></label>
     <input type="text" name="name" value="<%= @part.name %>" />
     <label><b>Status</b></label>
-      <select name="status">
-        <% Part::STATUS_MAP.each_pair do |key, value| %>
-        <option value="<%= key %>"<% if @part.status == key %> selected<% end %>>
-          <%= value %>
-        </option>
-        <% end %>
-      </select>
+    <select name="status">
+      <% Part::STATUS_MAP.each_pair do |key, value| %>
+      <option value="<%= key %>"<% if @part.status == key %> selected<% end %>>
+        <%= value %>
+      </option>
+      <% end %>
+    </select>
     <label><b>Notes</b></label>
      <textarea name="notes" rows="4"><%= @part.notes %></textarea>
+    <label><b>Source Material</b></label>
+    <input type="text" name="source_material" value="<%= @part.source_material %>" />
+    <label><b>Have Material?</b>
+      <input type="checkbox" name="have_material"<% if @part.have_material == 1 %>checked<% end %>/>
+    </label>
+    <label><b>Material Cut Length</b></label>
+    <input type="text" name="cut_length" value="<%= @part.cut_length %>" />
+    <label><b>Quantity Required</b></label>
+    <input type="text" name="quantity" value="<%= @part.quantity %>" />
+    <label><b>Drawing Created?</b>
+      <input type="checkbox" name="drawing_created"<% if @part.drawing_created == 1 %>checked<% end %>/>
+    </label>
+    <label><b>Priority</b></label>
+    <select name="priority">
+      <% Part::PRIORITY_MAP.each_pair do |key, value| %>
+      <option value="<%= key %>"<% if @part.priority == key %> selected<% end %>>
+        <%= value %>
+      </option>
+      <% end %>
+    </select>
     <label><input type="submit" class="btn btn-primary btn-medium" value="Save Part" /></label>
   </form>
 </div>
