Added first and last name to user model.

--- a/views/new_user.erb
+++ b/views/new_user.erb
@@ -5,6 +5,10 @@
   <form action="/users" method="POST">
     <label style="font-weight:bold;">E-mail</label>
     <input type="text" name="email" />
+    <label style="font-weight:bold;">First Name</label>
+    <input type="text" name="first_name" />
+    <label style="font-weight:bold;">Last Name</label>
+    <input type="text" name="last_name" />
     <label style="font-weight:bold;">Password</label>
     <input type="password" name="password" />
     <label style="font-weight:bold;">Verify Password</label>
