--- a/views/header.erb
+++ b/views/header.erb
@@ -17,17 +17,22 @@
         </a>
         <a class="brand" href="/">Team 254 Parts</a>
         <div class="nav-collapse collapse">
+          <% if @user %>
           <ul class="nav">
             <li>
-              <a href="/"> <i class="icon-th-large icon-black"></i> Dashboard</a>
+              <a href="/projects"> <i class="icon-th-large icon-black"></i> Projects</a>
             </li>
+            <% if @user.can_administer? %>
+            <li>
+              <a href="/users"> <i class="icon-th-list icon-black"></i> Users</a>
+            </li>
+            <% end %>
           </ul>
-          <% if @user %>
           <div class="pull-right">
             <ul class="nav pull-right">
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown"> <i class="icon-user"></i>
-                  <%= @user.email %> <b class="caret"></b></a>
+                  <%= @user.first_name %> <%= @user.last_name %> <b class="caret"></b></a>
                 <ul class="dropdown-menu">
                   <li>
                     <a href="/logout"><i class="icon-off"></i> Logout</a>
