--- a/views/user_edit.erb
+++ b/views/user_edit.erb
@@ -5,6 +5,10 @@
   <form action="" method="POST">
     <label style="font-weight:bold;">E-mail</label>
     <input type="text" name="email" value="<%= @user_edit.email %>"/>
+    <label style="font-weight:bold;">First Name</label>
+    <input type="text" name="first_name" value="<%= @user_edit.first_name %>"/>
+    <label style="font-weight:bold;">Last Name</label>
+    <input type="text" name="last_name" value="<%= @user_edit.last_name %>"/>
     <label style="font-weight:bold;">Change Password</label>
     <input type="password" name="password" />
     <label style="font-weight:bold;">Verify Password</label>
