--- a/views/users.erb
+++ b/views/users.erb
@@ -8,12 +8,14 @@
   <table  class="table table-striped table-condensed table-bordered">
     <tr>
       <th>E-mail</th>
+      <th>Name</th>
       <th>Permission</th>
       <th>Action</th>
     </tr>
     <% User.each do |user| %>
     <tr>
       <td><%= user.email %></td>
+      <td><%= user.first_name %> <%= user.last_name %></td>
       <td><%= User::PERMISSION_MAP[user.permission] %></td>
       <td>
         <a href="/users/<%= user.id %>/edit" class="btn btn-primary btn-small">
