Added dashboard listing view.

--- a/views/header.erb
+++ b/views/header.erb
@@ -22,6 +22,9 @@
             <li>
               <a href="/projects"> <i class="icon-th-large icon-black"></i> Projects</a>
             </li>
+            <li>
+              <a href="/dashboards"> <i class="icon-list-alt icon-black"></i> Dashboards</a>
+            </li>
             <% if @user.can_administer? %>
             <li>
               <a href="/users"> <i class="icon-th-list icon-black"></i> Users</a>
