--- a/views/users.erb
+++ b/views/users.erb
@@ -4,7 +4,7 @@
   <div class="pull-right" style="margin-top: 15px;">
     <a href="/new_user" class="btn btn-success btn-small"><i class="icon-white icon-user"></i> New User</a>
   </div>
-  <h2>Users</h2>
+  <h2>Active Users</h2>
   <table  class="table table-striped table-condensed table-bordered">
     <tr>
       <th>E-mail</th>
@@ -12,7 +12,31 @@
       <th>Permission</th>
       <th>Action</th>
     </tr>
-    <% User.each do |user| %>
+    <% User.where(:enabled => 1).order_append(:last_name).order_append(:first_name).each do |user| %>
+    <tr>
+      <td><%= user.email %></td>
+      <td><%= user.first_name %> <%= user.last_name %></td>
+      <td><%= User::PERMISSION_MAP[user.permission] %></td>
+      <td>
+        <a href="/users/<%= user.id %>/edit" class="btn btn-primary btn-small">
+          <i class="icon-white icon-pencil"></i> Edit
+        </a>
+        <a href="/users/<%= user.id %>/delete" class="btn btn-danger btn-small">
+          <i class="icon-white icon-trash"></i> Delete
+        </a>
+      </td>
+    </tr>
+    <% end %>
+  </table>
+  <h2>Disabled/Pending Users</h2>
+  <table  class="table table-striped table-condensed table-bordered">
+    <tr>
+      <th>E-mail</th>
+      <th>Name</th>
+      <th>Permission</th>
+      <th>Action</th>
+    </tr>
+    <% User.where(:enabled => 0).order_append(:last_name).order_append(:first_name).each do |user| %>
     <tr>
       <td><%= user.email %></td>
       <td><%= user.first_name %> <%= user.last_name %></td>
