--- a/views/new_user.erb
+++ b/views/new_user.erb
@@ -1,8 +1,8 @@
 <%= erb :header %>
 
 <div class="container">
-  <h2>Create New User</h2>
-  <form action="/users" method="POST">
+  <h2>Create User Account</h2>
+  <form action="" method="POST">
     <label style="font-weight:bold;">E-mail</label>
     <input type="text" name="email" />
     <label style="font-weight:bold;">First Name</label>
@@ -13,6 +13,7 @@
     <input type="password" name="password" />
     <label style="font-weight:bold;">Verify Password</label>
     <input type="password" name="password2" />
+    <% if @admin_new_user %>
     <label style="font-weight:bold;">Permission</label>
     <select name="permission">
       <% User::PERMISSION_MAP.each_pair do |key, value| %>
@@ -22,8 +23,9 @@
     <label style="font-weight:bold;">Enabled?</label>
     <input type="checkbox" name="enabled" checked />
     <br /><br />
+    <% end %>
     <label>
-      <input type="submit" class="btn btn-success btn-medium" value="Create User"
+      <input type="submit" class="btn btn-success btn-medium" value="Create Account"
           onclick="return verifyPasswordMatch(this.parentElement.parentElement);" />
     </label>
   </form>
