--- a/views/dashboard.erb
+++ b/views/dashboard.erb
@@ -1,14 +1,17 @@
 <%= erb :header %>
 
-<div id="content">
-  <h2>Project: <%= @project.name %></h2><br />
-  <% Part::STATUS_MAP.keys.reject { |k| k == "done" }.each do |status| %>
-  <h3><%= Part::STATUS_MAP[status] %>:</h3><br />
-  <% Part.where(:project_id => @project.id, :status => status).each do |part| %>
-    <p><a href="/parts/<%= part.id %>"><%= part.full_part_number %> - <%= part.name %></a></p>
-  <% end %>
-  <br /><br />
-  <% end %>
+<div class="container">
+  <select class="pull-right" name="status" style="margin-top: 15px;"
+      onchange="loadParts(<%= @project.id %>, this.value);">
+    <option selected>Filter by status...</option>
+    <% Part::STATUS_MAP.each_pair do |key, value| %>
+    <option value="<%= key %>"><%= value %></option>
+    <% end %>
+  </select>
+  <h2><%= @project.name %></h2>
+  <div id="dashboard-parts">
+    <%= erb :dashboard_parts %>
+  </div>
 </div>
 
 <%= erb :footer %>
