--- a/views/header.erb
+++ b/views/header.erb
@@ -6,6 +6,10 @@
   <link rel="icon" href="http://team254.com/wp-content/themes/cheesypoof2013/icons/favicon.ico">
   <link href='/css/css.css' rel='stylesheet' type='text/css' />
   <link href="/css/bootstrap.min.css" rel="stylesheet"></head>
+  <script src="/js/jquery-1.8.3.min.js"></script>
+  <script src="/js/bootstrap.min.js"></script>
+  <script src="/js/js.js"></script>
+</head>
 <body>
   <div class="navbar">
     <div class="navbar-inner">
