--- a/views/parts_list.erb
+++ b/views/parts_list.erb
@@ -16,7 +16,7 @@
       <a href="/parts/<%= part.parent_part.id %>"><%= part.parent_part.name if part.parent_part%></a>
       <% end %>
     </td>
-    <td><span class="label label-info"><%= Part::STATUS_MAP[part.status] %></span></td>
+    <td><span class="label label-status-<%= part.status %>"><%= Part::STATUS_MAP[part.status] %></span></td>
   </tr>
   <% end %>
 </table>
