--- a/views/new_user.erb
+++ b/views/new_user.erb
@@ -2,7 +2,7 @@
 
 <div class="container">
   <h2>Create User Account</h2>
-  <form action="" method="POST">
+  <form action="<% if @admin_new_user %>/users<% end %>" method="POST">
     <label style="font-weight:bold;">E-mail</label>
     <input type="text" name="email" />
     <label style="font-weight:bold;">First Name</label>
