--- a/views/parts_list.erb
+++ b/views/parts_list.erb
@@ -5,6 +5,9 @@
     <th>Name</th>
     <th>Parent</th>
     <th>Status</th>
+    <% if @user.can_edit? %>
+    <th>Action</th>
+    <% end %>
   </tr>
   <% parts.each do |part| %>
   <tr>
@@ -17,6 +20,16 @@
       <% end %>
     </td>
     <td><span class="label label-status-<%= part.status %>"><%= Part::STATUS_MAP[part.status] %></span></td>
+    <% if @user.can_edit? %>
+    <td>
+      <a href="/parts/<%= part.id %>/edit" class="btn btn-primary btn-small">
+        <i class="icon-white icon-pencil"></i>
+      </a>
+      <a href="/parts/<%= part.id %>/delete" class="btn btn-danger btn-small">
+        <i class="icon-white icon-trash"></i>
+      </a>
+    </td>
+    <% end %>
   </tr>
   <% end %>
 </table>
