--- a/views/parts_list.erb
+++ b/views/parts_list.erb
@@ -1,10 +1,10 @@
 <table  class="table table-striped table-condensed table-bordered">
   <tr>
-    <th>Part Number</th>
-    <th>Type</th>
-    <th>Name</th>
-    <th>Parent</th>
-    <th>Status</th>
+    <th><a href="?sort=id" style="color: #000;">Part Number</a></th>
+    <th><a href="?sort=type" style="color: #000;">Type</a></th>
+    <th><a href="?sort=name" style="color: #000;">Name</a></th>
+    <th><a href="?sort=parent_part_id" style="color: #000;">Parent</th>
+    <th><a href="?sort=status" style="color: #000;">Status</th>
     <% if @user.can_edit? %>
     <th>Action</th>
     <% end %>
