--- a/views/header.erb
+++ b/views/header.erb
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Team 254 Part Management System</title>
   <link rel="icon" href="http://team254.com/wp-content/themes/cheesypoof2013/icons/favicon.ico">
-  <link href="/css/bootstrap.min.css" rel="stylesheet"></head>
+  <link href="/css/bootstrap.min.css" rel="stylesheet">
   <link href='/css/css.css' rel='stylesheet' type='text/css' />
   <script src="/js/jquery-1.8.3.min.js"></script>
   <script src="/js/bootstrap.min.js"></script>
