--- a/views/part_delete.erb
+++ b/views/part_delete.erb
@@ -4,6 +4,7 @@
   <h2>Are you sure you want to delete <%= @part.type %> <%= @part.name %>?</h2>
   <form action="" method="POST">
     <input type="submit" class="btn btn-danger btn-medium" value="Yes" />
+    <input type="hidden" name="referrer" value="<%= @referrer %>" />
   </form>
 </div>
 
